--- a/style.css
+++ b/style.css
@@ -31,6 +31,45 @@ body {
     margin-top: 20px;
 }
 
+.container .row-2 {
+	width: 100%;
+    max-width: 500px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin-top: 20px;
+}
+
+.container .row .col-6 {
+	padding: 0;
+}
+
+.container .row .left {
+	padding-right: 2.5px;
+}
+
+.container .row .right {
+	padding-left: 2.5px;
+}
+
+.container .row .col-6 input {
+	width: 100%;
+	background: #fff;
+    height: 50px;
+    border: 2px solid #000;
+    border-radius: 0;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.container .row .col-6 input:hover {
+	background: #000;
+	color: #fff;
+}
+
 .container .row .input-field {
 	margin-top: 30px;
     height: 50px;
@@ -39,6 +78,7 @@ body {
     background-repeat: no-repeat;
 	background-position: 96% 50%;
 	background-size: auto;
+	outline: none;
 }
 
 .container .row .in-1 {
